@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-07-03T16:13:18Z",
-  "count_outdated" : 36,
-  "uniques_outdated" : 28,
+  "timestamp" : "2023-07-06T01:06:13Z",
+  "count_outdated" : 40,
+  "uniques_outdated" : 30,
   "count" : 45,
   "uniques" : 34,
   "clones" : [
-    {
-      "timestamp": "2023-06-21T00:00:00Z",
-      "count": 4,
-      "count_minmax": [ 4, 4 ],
-      "count_decinc": [ 0, 4 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
-    },
     {
       "timestamp": "2023-06-22T00:00:00Z",
       "count": 1,
