@@ -1,12 +1,7 @@
 {
-  "count": 9,
-  "uniques": 6,
+  "count": 5,
+  "uniques": 4,
   "clones": [
-    {
-      "timestamp": "2023-06-21T00:00:00Z",
-      "count": 4,
-      "uniques": 2
-    },
     {
       "timestamp": "2023-06-22T00:00:00Z",
       "count": 1,
